--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <div class="container">
+                
+            </div>
+        </header>
+
+        <section>
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
