Complete footer section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>egen</title>
 </head>
 <body>
     <div class="wrapper">
@@ -38,7 +39,7 @@
 
         <footer>
             <div class="container">
-
+                <p>© 2023 <span>Elitesgen Foundation,</span> All Rights Reserved.</p>
             </div>
         </footer>
     </div>
