--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="35x30" href="./images/logo-small.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One& family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>egen</title>
 </head>
