--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <link rel="icon" type="image/png" sizes="35x30" href="./images/logo-small.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>egen</title>
 </head>
@@ -32,13 +29,22 @@
             </div>
         </section>
 
-        <section id="about-us">
+        <section id="about">
             <div class="container">
+                <div class="top">
+                    <img class="about-icons heart-2" src="./images/heart-2.png.png" alt="">
+                    <img class="about-icons heart-3" src="./images/heart-3.png.png" alt="">
+                    <img class="about-icons imoji" src="./images/imoji-1.png" alt="">
+                    <img class="about-icons img-2" src="./images/about-2.png" alt="">
+                    <!-- <img id="hero-img" src="/images/coming-soon.png" alt=""> -->
+                    <img class="about-img" src="/images/about-img.png" alt="About us">
+                    <div class="about-icon text-box title">Making The World A Better Place</div>
+                </div>
 
-                <div class="about">
-                    <div id="abt-h">
-                        <h3>ABOUT THE <span id="col-grn">MISSION</span></h3>
-                        <h1>WE ARE HERE TO BRING PEOPLE TOGETHER</h1>
+                <div class="bottom">
+                    <div class="header-group">
+                        <h3 class="subheader">ABOUT THE <span class="green-text">MISSION</span></h3>
+                        <h1 class="body-header">WE ARE HERE TO BRING PEOPLE TOGETHER</h1>
                     </div>
                     <div id="abt-bdy">
                         <p id="abt-par">We see a need for mental health services in our community that is not being met,
@@ -60,10 +66,6 @@
                             <li>Personal development</li>
                         </ul>
                     </div>
-                </div>
-                <div class="hero">
-                    <img id="hero-img" src="/images/coming-soon.png" alt="">
-                    <div class="box">Making The World A Better Place</div>
                 </div>
             </div>
 
