--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
     <title>egen</title>
 </head>
@@ -46,21 +46,17 @@
                         <h3 class="subheader">ABOUT THE <span class="green-text">MISSION</span></h3>
                         <h1 class="body-header">WE ARE HERE TO BRING PEOPLE TOGETHER</h1>
                     </div>
-                    <div id="abt-bdy">
-                        <p id="abt-par">We see a need for mental health services in our community that is not being met,
-                            it fueled us with a desire to make a positive impact in the world and (lives of others)</p>
-                        <p id="abt-par2">Through a positive support system and humanitarian services, we strive to
-                            improve the overall well-being and quality of life for all</p>
-                    </div>
-                    <div id="blt-pnt">
-                        <ul style="list-style-image: url(/images/check2-circle.svg);" class="title">
+                    
+                    <p>We see a need for mental health services in our community that is not being met, it fueled us with a desire to make a positive impact in the world and (lives of others)</p>
+                    <p id="abt-par2">Through a positive support system and humanitarian services, we strive to improve the overall well-being and quality of life for all</p>
+                    
+                    <div class="checkbox-group">
+                        <ul class="title">
                             <li>Mental Health</li>
                             <li>Counseling</li>
                             <li>Mindset Coaching</li>
                         </ul>
-                    </div>
-                    <div id="blt-pnt1">
-                        <ul style="list-style-image: url(/images/check2-circle.svg);" class="title">
+                        <ul class="title">
                             <li>Community</li>
                             <li>Relationship</li>
                             <li>Personal development</li>
@@ -77,11 +73,11 @@
             </div>
         </section>
 
-        <footer>
+        <!-- <footer>
             <div class="container">
                 <p>© 2023 <span>Elitesgen Foundation,</span> All Rights Reserved.</p>
             </div>
-        </footer>
+        </footer> -->
     </div>
 </body>
 
