Add background image to about, improve h1 letter spacing

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </section>
 
         <section id="about">
+            <!-- <div class="about-bg" style="background-image: url(./images/shape-5.png);"></div> -->
+            <div class="about-bg"></div>
             <div class="container">
                 <div class="top">
                     <img class="about-icons heart-2" src="./images/heart-2.png.png" alt="">
