Complete desktop about section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <section id="about">
             <!-- <div class="about-bg" style="background-image: url(./images/shape-5.png);"></div> -->
             <div class="about-bg"></div>
+            <div class="about-bg-half"></div>
             <div class="container">
                 <div class="top">
                     <img class="about-icons heart-2" src="./images/heart-2.png.png" alt="">
@@ -40,7 +41,7 @@
                     <img class="about-icons img-2" src="./images/about-2.png" alt="">
                     <!-- <img id="hero-img" src="/images/coming-soon.png" alt=""> -->
                     <img class="about-img" src="/images/about-img.png" alt="About us">
-                    <div class="about-icon text-box title">Making The World A Better Place</div>
+                    <div class="text-box title">Making The World A Better Place</div>
                 </div>
 
                 <div class="bottom">
@@ -49,8 +50,8 @@
                         <h1 class="body-header">WE ARE HERE TO BRING PEOPLE TOGETHER</h1>
                     </div>
                     
-                    <p>We see a need for mental health services in our community that is not being met, it fueled us with a desire to make a positive impact in the world and (lives of others)</p>
-                    <p id="abt-par2">Through a positive support system and humanitarian services, we strive to improve the overall well-being and quality of life for all</p>
+                    <p>We see a need for mental health services in our community that is not being met, it fueled us with a desire to make a positive impact in the world and lives of others</p>
+                    <p id="abt-par2">Through a unique support system and humanitarian services, we strive to improve the overall well-being and quality of life for all</p>
                     
                     <div class="checkbox-group">
                         <ul class="title">
