--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             </div>
         </section>
 
-        <!-- <footer>
+        <footer>
             <div class="container">
                 <p>© 2023 <span>Elitesgen Foundation,</span> All Rights Reserved.</p>
             </div>
-        </footer> -->
+        </footer>
     </div>
 </body>
 
