Add progress in volunteer section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="35x30" href="./images/logo-small.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito&family=Nunito+Sans&family=Quicksand:wght@400;600;700&display&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
     <title>egen</title>
@@ -70,9 +70,62 @@
 
         </section>
 
-        <section>
+        <section class="volunteer">
+            <div class="volunteer-bg"></div>
+            <div class="volunteer-patter-layer"></div>
             <div class="container">
+                <div class="apply">
+                    <div class="top">
+                        <div class="header-group">
+                            <h3 class="green-text">VOLUNTEER</h3>
+                            <h1 class="body-header">BE PART OF OUR MISSION</h1>
+                        </div>
+                        <p>We are looking for passionate people to join us on our mission. We value flat hierarchies, clear communication, and full ownership and responsibility.</p>
+                        <button>DONATE</button>
+                    </div>
 
+                    <div class="bottom">
+                        <div class="apply-row">
+                            <p>UI Designer</p>
+                            <button class="btn-secondary">
+                                <span>APPLY</span>
+                                <img src="./images/icon-arrow-btn.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="apply-row">
+                            <p>UI Designer</p>
+                            <button>
+                                <span>APPLY</span>
+                                <img src="./images/icon-arrow-btn.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="apply-row">
+                            <p>UI Designer</p>
+                            <button>
+                                <span>APPLY</span>
+                                <img src="./images/icon-arrow-btn.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="apply-row">
+                            <p>UI Designer</p>
+                            <button>
+                                <span>APPLY</span>
+                                <img src="./images/icon-arrow-btn.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="apply-row">
+                            <p>UI Designer</p>
+                            <button>
+                                <span>APPLY</span>
+                                <img src="./images/icon-arrow-btn.svg" alt="">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="recent">
+
+                </div>
             </div>
         </section>
 
