Complete Volunteer > apply section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <section class="volunteer">
             <div class="volunteer-bg"></div>
-            <div class="volunteer-patter-layer"></div>
+            <div class="volunteer-pattern-layer"></div>
             <div class="container">
                 <div class="apply">
                     <div class="top">
@@ -86,35 +86,35 @@
 
                     <div class="bottom">
                         <div class="apply-row">
-                            <p>UI Designer</p>
+                            <p class="title">UI Designer</p>
                             <button class="btn-secondary">
                                 <span>APPLY</span>
                                 <img src="./images/icon-arrow-btn.svg" alt="">
                             </button>
                         </div>
                         <div class="apply-row">
-                            <p>UI Designer</p>
+                            <p class="title">UI Designer</p>
                             <button>
                                 <span>APPLY</span>
                                 <img src="./images/icon-arrow-btn.svg" alt="">
                             </button>
                         </div>
                         <div class="apply-row">
-                            <p>UI Designer</p>
+                            <p class="title">UI Designer</p>
                             <button>
                                 <span>APPLY</span>
                                 <img src="./images/icon-arrow-btn.svg" alt="">
                             </button>
                         </div>
                         <div class="apply-row">
-                            <p>UI Designer</p>
+                            <p class="title">UI Designer</p>
                             <button>
                                 <span>APPLY</span>
                                 <img src="./images/icon-arrow-btn.svg" alt="">
                             </button>
                         </div>
                         <div class="apply-row">
-                            <p>UI Designer</p>
+                            <p class="title">UI Designer</p>
                             <button>
                                 <span>APPLY</span>
                                 <img src="./images/icon-arrow-btn.svg" alt="">
