--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             </div>
                         
                             <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-prev" id="btn"></div>
                             <div class="swiper-button-next"></div>
                         </div>
                     </div> 
