Add hero desktop

--- a/index.html
+++ b/index.html
@@ -26,9 +26,42 @@
             </div>
         </header>
 
-        <section>
+        <section id="hero">
+            <div class="hero-bg"></div>
             <div class="container">
+                <div class="hero-flex">
+                    <div class="hero-left-text">
+                        <div>
+                            <h3 class="subheader">STAY CONNECTED WITH US...</h3>
+                            <ul>
+                                <li>
+                                    <img src="images/icon-twitter.svg" alt="twitter">
+                                    <a href="">TWITTER</a>
+                                </li>
+                                <li>
+                                    <img src="images/icon-facebook.svg" alt="facebook">
+                                    <a href="">FACEBOOK</a>
+                                </li>
+                                <li>
+                                    <img src="images/icon-instagram.svg" alt="instagram">
+                                    <a href="">INSTAGRAM</a>
+                                </li>
+                                <li>
+                                    <img src="images/icon-phone.svg" alt=""><a href="">+2349033221100</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
+                    <div class="hero-right-text">
+                        <div>
+                            <h1 class="header">WE ARE <br> COMING <span class="green-text">SOON</span></h1>
+                            <h4 class="subheader">OUR SITE IS UNDER CONSTRUCTION</h4>
+                            <p>Welcome to elitesgen, we are a supportive and inclusive community working to improve mental health and overall personal well-being by addressing challenges such as depression, poverty, isolation, loneliness, helplessness, and other related challenges.</p>
+                            <button>LEARN MORE</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -72,7 +105,7 @@
             </div>
         </section>
 
-        <section class="volunteer">
+        <section id="volunteer">
             <div class="volunteer-bg"></div>
             <div class="volunteer-pattern-layer"></div>
             <div class="container">
