--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                     <div class="bottom">
                         <div class="apply-row">
                             <p class="title">UI Designer</p>
-                            <button class="btn-secondary">
+                            <a href="https://chatwith.io/s/elitesgen"><button class="btn-secondary">
                                 <span>APPLY</span>
                                 <img src="./images/icon-arrow-btn.svg" alt="">
-                            </button>
+                                </button></a>
                         </div>
                         <div class="apply-row">
                             <p class="title">UX Writer</p>
