--- a/index.html
+++ b/index.html
@@ -35,19 +35,28 @@
                             <h3 class="subheader">STAY CONNECTED WITH US...</h3>
                             <ul>
                                 <li>
-                                    <img src="images/icon-twitter.svg" alt="twitter">
-                                    <a href="">TWITTER</a>
+                                    <a href="https://twitter.com/elitesgen" target="_blank">
+                                        <img src="images/icon-twitter.svg" alt="twitter">
+                                        <span>TWITTER</span>
+                                    </a>
                                 </li>
                                 <li>
-                                    <img src="images/icon-facebook.svg" alt="facebook">
-                                    <a href="">FACEBOOK</a>
+                                    <a href="https://facebook.com/elitesgen" target="_blank">
+                                        <img src="images/icon-facebook.svg" alt="facebook">
+                                        <span>FACEBOOK</span>
+                                    </a>
                                 </li>
                                 <li>
-                                    <img src="images/icon-instagram.svg" alt="instagram">
-                                    <a href="">INSTAGRAM</a>
+                                    <a href="https://instagram.com/elitesgen" target="_blank">
+                                        <img src="images/icon-instagram.svg" alt="instagram">
+                                        <span>INSTAGRAM</span>
+                                    </a>
                                 </li>
                                 <li>
-                                    <img src="images/icon-phone.svg" alt=""><a href="">+2349033221100</a>
+                                    <a href="tel:+2349038096064" target="_blank">
+                                        <img src="images/icon-phone.svg" alt="">
+                                        <span>+2349033221100</span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
