updated html with header

--- a/index.html
+++ b/index.html
@@ -20,9 +20,85 @@
 
 <body>
     <div class="wrapper">
+              <div class="backdrop"></div>
         <header>
             <div class="container">
+             <div>
+            <!-- MOBILE HEADER -->
+            <div class="mobile-header">
+              <div class="mobile-header__active">
+                <div class="header-logo">
+                  <img src="./images/egen logo.svg" alt="Egen logo" />
+                </div>
+                <button class="toggle-button">
+                  <span class="toggle-button__bar"></span>
+                  <span class="toggle-button__bar"></span>
+                  <span class="toggle-button__bar"></span>
+                </button>
+                <button class="menu-close-btn">
+                  <img src="./images/menu-close.svg" alt="" />
+                </button>
+              </div>
+              <!-- SIDE BAR -->
+              <nav class="side-bar">
+                <ul class="side-bar__navs">
+                  <li class="side-bar__nav home-nav">
+                    <div></div>
+                    <a href="#">HOME</a>
+                  </li>
+                  <hr />
+                  <li class="side-bar__nav">
+                    <a href="#">ABOUT THE MISSION</a>
+                  </li>
+                  <hr />
+                  <li class="side-bar__nav"><a href="#">VOLUNTEER</a></li>
+                  <hr />
+                </ul>
+                <div class="side-bar__contact-info">
+                  <div class="side-bar__email-address">
+                    <h4>Contact Info</h4>
+                    <p>info@example.com</p>
+                    <p>elitesgen@gmail.com</p>
+                  </div>
+                  <ul class="side-bar__social-media__link">
+                    <li>
+                      <a class="subheader" href="#"
+                        ><img src="./images/icon-twitter.svg" alt="" />
+                      </a>
+                    </li>
+                    <li>
+                      <a class="subheader" href="#">
+                        <img src="./images/icon-facebook.svg" alt="" />
+                      </a>
+                    </li>
+                    <li>
+                      <a class="subheader" href="#"
+                        ><img src="./images/" alt=""
+                      /></a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+            </div>
 
+            <!-- DESKTOP HEADER -->
+            <div class="desktop-header">
+              <div class="header-logo">
+                <img src="./images/egen logo.svg" alt="Egen logo" />
+              </div>
+              <nav class="desktop-nav">
+                <ul class="desktop-nav__items">
+                  <li class="desktop-home-nav">
+                    <a href="#">HOME</a>
+                    <div></div>
+                  </li>
+                  <li><a href="#">ABOUT THE MISSION</a></li>
+                  <li><a href="#">CONTACT US</a></li>
+                  <li><a href="#">VOLUNTEER</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
             </div>
         </header>
 
