--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
               <div class="backdrop"></div>
         <header>
-            <div class="container">
+            <div class="header-container">
              <div>
             <!-- MOBILE HEADER -->
             <div class="mobile-header">
@@ -103,7 +103,7 @@
         </header>
 
         <section id="hero">
-            <div class="hero-bg"></div>
+            <div class="hero-bg" style="background-image: linear-gradient(45deg, rgb(0 0 0 / .4), rgb(0 0 0 / .1), rgb(0 0 0 / .4)), url('images/hero-img.png');"></div>
             <div class="container">
                 <div class="hero-flex">
                     <div class="hero-left-text">
