Add basic structure for new navbar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,36 @@
 
 <body>
     <div class="wrapper">
-              <div class="backdrop"></div>
+              <!-- <div class="backdrop"></div> -->
         <header>
+            <div class="container">
+                <nav class="navbar navbar-expand">
+                    <img class="navbar-brand" src="./images/egen logo.svg" alt="elitesgen logo">
+                    <img class="navbar-toggler" src="./images/menu-open.svg" alt="">
+                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> -->
+                        <!-- <span class="navbar-toggler-icon"></span> -->
+                    <!-- </button> -->
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#">Disabled</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
+
             <div class="header-container">
              <div>
             <!-- MOBILE HEADER -->
@@ -93,7 +121,6 @@
                     <div></div>
                   </li>
                   <li><a href="#">ABOUT THE MISSION</a></li>
-                  <li><a href="#">CONTACT US</a></li>
                   <li><a href="#">VOLUNTEER</a></li>
                 </ul>
               </nav>
@@ -247,7 +274,7 @@
                     <div class="carousel">
                         <div class="header-group">
                             <h3 class="subheader">RECENT DONORS / VOLUNTEERS</h3>
-                            <h2 class="body-header">People That Enable Us To Make A Difference</h2>
+                            <h1 class="body-header">People That Enable Us To Make A Difference</h1>
                         </div>
                         
                         <!-- Slider main container -->
