Improve mobile/desktop narbar

--- a/index.html
+++ b/index.html
@@ -19,36 +19,66 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-expand">
+                <img class="navbar-brand" src="./images/egen logo.svg" alt="elitesgen logo">
+                <img class="navbar-toggler" src="./images/menu-open.svg" alt="">
+                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> -->
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+                <!-- </button> -->
+                <div class="collapse navbar-expand" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link active" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">ABOUT THE MISSION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#volunteer">VOLUNTEER</a>
+                        </li>
+                    </ul>
+
+                    <div class="nav-contact-group">
+                        <div class="nav-contact-info">
+                            <h4 class="title">Contact Info</h4>
+                            <p>
+                                <a href="tel:+2349038096064">+2349038096064</a>
+                            </p>
+                            <p>
+                                <a href="mailto:elitesgen@gmail.com">elitesgen@gmail.com</a>
+                            </p>
+                        </div>
+
+                        <div class="nav-socials">
+                            <ul >
+                                <li>
+                                    <a class="subheader" href="https://twitter.com/elitesgen" target="_blank">
+                                        <img src="./images/icon-twitter.svg" alt="twitter link">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="subheader" href="https://facebook.com/elitesgen" target="_blank">
+                                        <img src="./images/icon-facebook.svg" alt="facebook link">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="subheader" href="https://instagram.com/elitesgen" target="_blank">
+                                        <img src="./images/icon-instagram.svg" alt="instagram link">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
     <div class="wrapper">
               <!-- <div class="backdrop"></div> -->
-        <header>
-            <div class="container">
-                <nav class="navbar navbar-expand">
-                    <img class="navbar-brand" src="./images/egen logo.svg" alt="elitesgen logo">
-                    <img class="navbar-toggler" src="./images/menu-open.svg" alt="">
-                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> -->
-                        <!-- <span class="navbar-toggler-icon"></span> -->
-                    <!-- </button> -->
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Disabled</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-
+        <header style="display: none;">
+            
 
             <div class="header-container">
              <div>
