Improve nav menu for mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand">
+            <nav class="navbar">
                 <img class="navbar-brand" src="./images/egen logo.svg" alt="elitesgen logo">
                 <img class="navbar-toggler" src="./images/menu-open.svg" alt="">
                 <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> -->
